Change branch html Changes

--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -126,7 +126,7 @@
 
                     @*Addition by swapnali | Date:14/09/2016*@
                      <li class="xn-openable">
-                         <a href="/Employee/ChangeBranch"><span class="fa fa-pencil"></span> <span class="xn-text">Change Branch</span></a>
+                         <a href="/Employee/ChangeBranch"><span class="fa fa-map-marker"></span> <span class="xn-text">Change Branch</span></a>
                     </li>
                     @*End*@
 
