--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/ChangeBranch.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/ChangeBranch.cshtml
@@ -40,9 +40,9 @@
 <!-- END CONTENT FRAME -->
 
 <div class="page-content-wrap">
-
+ 
     <form role="form" id="frmChangeBranch">
-
+        <br />
         <div class="row">
             <input type="hidden" class="form-control" id="hdf_EmployeeId" name="Employee.Employee_Id" value="@Model.Employee.Employee_Id" />
 
@@ -93,7 +93,7 @@
 
         </div>
 
-        <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); padding-left: 20px; padding-right: 0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
+        <div class="col-md-12" >
 
             <div class="btn-group">
                 <button type="button" class="btn btn-success active" id="btnSaveBranch">Save</button>
