--- a/MyLeoRetailer/Views/PostLogin/Master/PurchaseInvoice/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/PurchaseInvoice/Index.cshtml
@@ -44,8 +44,7 @@
                                 <input type="hidden" class="form-control input-sm" name="PurchaseInvoice.Purchase_Invoice_Id" id="hdf_PurchaseInvoiceId" value="@Model.PurchaseInvoice.Purchase_Invoice_Id">
 
                                 <input type="hidden" class="form-control input-sm" name="PurchaseInvoice.hdn_Tax_Percentage" id="hdf_hdn_Tax_Percentage" value="@Model.PurchaseInvoice.hdn_Tax_Percentage">
-
-
+                                
                                 <h4 style="margin-top: 0px;">Primary information.</h4>
 
                                 <div class="form-group">
@@ -81,6 +80,8 @@
 
                             <div class="block">
                                 <h4 style="margin-top: 0px;">Vendor Details.</h4>
+
+                                <input type="hidden" class="form-control input-sm" id="hdf_Vendor_Id">
 
                                 <div class="form-group">
                                     <select class="form-control select" id="drpVendor_Id" name="PurchaseInvoice.Vendor_Id" onchange="Get_Vendor_Details_By_Id(this.value)">
@@ -120,7 +121,7 @@
 
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Against Form.</span>
-                                    <input type="text" class="form-control input-sm" name="PurchaseInvoice.Against_Form" id="txtAgainst_Form" value="@Model.PurchaseInvoice.Against_Form" placeholder="Enter against form." />
+                                    <input type="text" class="form-control input-sm" name="PurchaseInvoice.Against_Form" id="txtAgainst_Form" value="@(Model.PurchaseInvoice.Against_Form == 0 ? "" : Model.PurchaseInvoice.Against_Form.ToString())" placeholder="Enter against form." />
                                 </div>
 
                                 <div class="form-group">
@@ -207,8 +208,18 @@
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseInvoice.PurchaseInvoices[0].Barcode" id="textBarcode_No_0">
                                         </td>
-                                        <td>
+                                        @*<td>
                                             <input class="form-control input-sm" type="text" name="PurchaseInvoice.PurchaseInvoices[0].SKU_Code" id="textSKU_No_0" onchange="javascript: Get_Purchase_Invoice_Items_By_SKU_Code(0);">
+                                        </td>*@
+                                        <td>
+                                            <div class="form-group auto-complete">
+                                                <div class="input-group">
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" onblur="javascript: Get_Purchase_Invoice_Items_By_SKU_Code(0);"  placeholder="Enter SKU to search" value="" data-table="Product_MRP" data-col="Product_Id,SKU_Code" data-headernames="SKU Code" data-param="hdf_Vendor_Id" data-field="Vendor_Id"  />
+                                                    <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                                    <input type="hidden" id="hdnProduct_Id_0" value="" class="auto-complete-value" />
+                                                    <input type="hidden" id="hdnSKU_No_0" value="" name="PurchaseInvoice.PurchaseInvoices[0].SKU_Code" class="auto-complete-label" />
+                                                </div>
+                                            </div>
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseInvoice.PurchaseInvoices[0].Article_No" id="textArticle_No_0" readonly />
@@ -249,7 +260,7 @@
                                         <td>
                                             <div class="form-group auto-complete">
                                                 <div class="input-group">
-                                                    <input type="text" class="form-control invoice-filter autocomplete-text" name="PurchaseInvoice.PurchaseInvoices[0].Purchase_Order_No" id="textPurchase_Order_No_0" placeholder="Enter PO no. to search" value="" data-table="Purchase_Order" data-col="Purchase_Order_Id,Purchase_Order_No" data-headernames="Purchase Order" />
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text" name="PurchaseInvoice.PurchaseInvoices[0].Purchase_Order_No" id="textPurchase_Order_No_0" placeholder="Enter PO no. to search" value="" data-table="Purchase_Order" data-col="Purchase_Order_Id,Purchase_Order_No" data-headernames="Purchase Order" data-param="hdf_Vendor_Id" data-field="Vendor_Id" />
                                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                                     <input type="hidden" id="hdnPurchase_Order_Id_0" value="" name="PurchaseInvoice.PurchaseInvoices[0].Purchase_Order_Id" class="auto-complete-value" />
                                                     <input type="hidden" id="hdnPurchase_Order_No_0" value="" name="PurchaseInvoice.PurchaseInvoices[0].Purchase_Order_No" class="auto-complete-label" />
@@ -314,7 +325,7 @@
                                             <label>Discount</label>
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseInvoice.Discount_Percentage" onblur="javascript: CalculateDiscount();" id="textDiscountPercentage_0">
+                                            <input class="form-control input-sm" type="text" name="PurchaseInvoice.Discount_Percentage" value="0" onblur="javascript: CalculateDiscount();" id="textDiscountPercentage_0">
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseInvoice.Discount_Amount" readonly id="textDiscountAmount_0">
@@ -356,7 +367,7 @@
                                             <label>Tax</label>
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseInvoice.Tax_Percentage" onblur="javascript: CalculateTax();" id="textTaxPercentage_0" />
+                                            <input class="form-control input-sm" type="text" name="PurchaseInvoice.Tax_Percentage" readonly id="textTaxPercentage_0" />
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text"  name="PurchaseInvoice.Tax_Amount" readonly id="textTaxAmount_0">
