--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
@@ -130,6 +130,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+
                                     <tr id="SalesOrderItemRow_0">
                                         <td>
                                             <input class="form-control input-sm" type="text" style="width:150px" name="SaleOrderItemList[0].Barcode" id="textBarcode_No_0" placeholder="Barcode No">
@@ -193,6 +194,78 @@
                                             <button type='button' id='delete-salesorder-details' class='btn btn-danger active' onclick='javascript:DeleteSalesOrderDetailsData(0)'>Delete</button>
                                         </td>
                                     </tr>
+@if (Model.SaleOrderItemList != null && Model.SaleOrderItemList.Count() > 0)
+                                {
+                                    int i = 1;
+                                    @foreach (var itm in Model.SaleOrderItemList)
+{
+    <tr id="SalesOrderItemRow_@(i)" +>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:150px" name="SaleOrderItemList[@(i)].Barcode" id="textBarcode_No_@(i)" placeholder="Barcode No">
+        </td>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:150px" name="SaleOrderItemList[0].SKU_Code" id="textSKU_No_0" placeholder="SKU Code" onchange="javascript: Get_Sales_Order_Items_By_SKU_Code(0);">
+        </td>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:60px" name="SaleOrderItemList[0].Article_No" id="textArticle_No_0" readonly placeholder="Article No">
+        </td>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:100px" name="SaleOrderItemList[0].Brand" id="textBrand_0" readonly placeholder="Brand">
+            <input type="hidden" name="SaleOrderItemList[0].Brand_Id" id="hdnBrand_Id_0" />
+        </td>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:80px" name="SaleOrderItemList[0].Category" id="textCategory_0" readonly placeholder="Category">
+            <input type="hidden" name="SaleOrderItemList[0].Category_Id" id="hdnCategory_Id_0" />
+
+        </td>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:80px" name="SaleOrderItemList[0].SubCategory" id="textSub_Category_0" readonly placeholder="Sub Category">
+            <input type="hidden" name="SaleOrderItemList[0].SubCategory_Id" id="hdnSubCategory_Id_0" />
+        </td>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:50px" name="SaleOrderItemList[0].Size_Name" id="textSize_Name_0" readonly placeholder="Size">
+            <input type="hidden" name="SaleOrderItemList[0].Size_Id" id="hdnSize_Id_0" />
+
+        </td>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:60px" name="SaleOrderItemList[0].Colour_Name" id="textColour_Name_0" readonly placeholder="Colour">
+            <input type="hidden" name="SaleOrderItemList[0].Colour_Id" id="hdnColour_Id_0" />
+
+        </td>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:50px" name="SaleOrderItemList[0].Quantity" id="textQuantity_0" value="1" placeholder="Quantity" onblur="javascript: CalculateTotal();">
+        </td>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:50px" name="SaleOrderItemList[0].MRP_Price" id="textMRP_Price_0" readonly placeholder="MRP">
+        </td>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:70px" name="SaleOrderItemList[0].Discount_Percentage" id="textDiscount_Percentage_0" value="0" onblur="javascript: CalculateTotal();" placeholder=" discount %">
+        </td>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:70px" name="SaleOrderItemList[0].SalesOrder_Discount_Amount" id="textSalesOrder_Discount_Amount_0" readonly placeholder="D Amt">
+        </td>
+        <td>
+            <input class="form-control input-sm" type="text" style="width:80px" name="SaleOrderItemList[0].Amount" id="textAmount_0" readonly placeholder="Amt">
+        </td>
+        <td>
+            @*<input class="form-control input-sm" type="text" name="SaleOrderItemList[0].SalesMan" id="textSalesMan_0" placeholder="SalesMan">*@
+            <div class="form-group auto-complete">
+                <div class="input-group">
+                    <input type="text" class="form-control invoice-filter autocomplete-text" name="SaleOrderItemList[0].SalesMan" style="width:80px" id="textSalesMan_0" placeholder="Enter SalesMan" value="" data-table="Employee" data-col="Employee_Id,Employee_Name" data-headernames="Employee" data-param="hdnEmployee_Id" data-field="Role_Id">
+                    <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                    <input type="hidden" id="hdnSalesManId_0" value="" name="SaleOrderItemList[0].SalesMan_Id" class="auto-complete-value" />
+                    <input type="hidden" id="hdnSalesMan_0" value="" name="SaleOrderItemList[0].SalesMan" class="auto-complete-label" />
+                </div>
+            </div>
+        </td>
+        <td>
+            <button type='button' id='delete-salesorder-details' class='btn btn-danger active' onclick='javascript:DeleteSalesOrderDetailsData(0)'>Delete</button>
+        </td>
+    </tr>
+    i++;
+}
+                                }
+
                                 </tbody>
                             </table>
                         </div><!-- /.col -->
