Purchase Order Request

--- a/MyLeoRetailer/Views/PostLogin/Master/PurchaseOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/PurchaseOrder/Index.cshtml
@@ -406,13 +406,15 @@
                             <td style="width:60px;"></td>                  
                             <td style="text-align:right; width:100px;">Total quantity.</td>
                             <td style="width:100px;">
-                                <span class="label label-primary label-form" style="margin-bottom: 1px;" name="PurchaseOrder.Total_Quantity" id="tdTotalQuantity"></span>
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;" id="tdTotalQuantity">0</span>
+                                <input type="hidden" id="hdnTotalQuantity" name="PurchaseOrder.Total_Quantity" />
                             </td>
                             <td style="width:100px;"></td>
                             <td style="width:100px;"></td>
                             <td style="text-align:right; width:100px;">Net Amount.</td>
                             <td id="" style="width:100px;">
-                                <span class="label label-primary label-form" style="margin-bottom: 1px;" name="PurchaseOrder.Net_Amount" id="tdNetAmount"></span>
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;" id="tdNetAmount">0</span>
+                                <input type="hidden" id="hdnTotalQuantity" name="PurchaseOrder.Net_Amount" />
                             </td>
                             <td style="width:auto;"></td>
                             <td style="width:180px;"></td>
