--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
@@ -41,10 +41,21 @@
 
                         <div class="col-md-8" style="padding: 0px;">
 
-                            <div class="form-group">
+                            
+                <div class="form-group auto-complete">
+                    <div class="input-group">
+                        <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Employee" id="txtEmployee_Name" placeholder="Enter employee name to search." data-table="Employee" data-col="Employee_Id,Employee_Name" data-headernames="Employee">
+                        <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                        <input type="hidden" id="hdf_EmployeeId" value="" name="Employee.Employee_Id" class="auto-complete-value" />
+                        <input type="hidden" id="hdnEmployeeName" value="" name="Filter.Employee_Name" class="auto-complete-label" />
+                    </div>
+                </div>
+
+
+                           @* <div class="form-group">
                                 <input type="text" class="form-control" name="Filter.Employee" placeholder="Enter employee name to search." />
                                 <input type="hidden" class="form-control" id="hdf_EmployeeId" name="Employee.Employee_Id" />
-                            </div>
+                            </div>*@
 
                         </div>
 
@@ -56,7 +67,9 @@
                                 <button class="btn btn-danger active" style="display:none;" id="btnEdit" >Edit</button>*@
                                 <button role="button" class="btn btn-info active" value="Create" id="btnMapBranchEmployee" style="display:none">Map Branch to Employee </button>
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreateEmployee">Create</button>
-                                <button class="btn btn-danger active" value="Edit" id="btnEditEmployee">Edit</button>
+                                @*modification*@
+                                <button class="btn btn-danger active" value="Edit" style="display:none;" id="btnEditEmployee">Edit</button>
+                                @*End*@
                             </div>
 
                         </div>
