--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
@@ -64,9 +64,11 @@
                             <div class="block">
                                 <h4 style="margin-top: 0px;">Purchase Invoice details.</h4>
 
+                                <input type="hidden" class="form-control input-sm" id="hdf_Purchase_Invoice_Id">
+
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Invoice No.</span>
-                                    <select class="form-control " id="drpPurchase_Invoice_Id" name="PurchaseReturnRequest.Purchase_Invoice_Id">
+                                    <select class="form-control select" id="drpPurchase_Invoice_Id" name="PurchaseReturnRequest.Purchase_Invoice_Id" onchange="Set_Purchase_Invoice_Id(this.value)">
                                         <option value="">Select Invoice No.</option>
                                     </select>
                                 </div>
@@ -98,14 +100,30 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    <span generated="true" style="color: #b64645;" class="help-block pull-right" id="lblError"></span>
                                     <tr id="PurchaseReturnRequestItemRow_0">
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Barcode" id="textBarcode_No_0">
                                         </td>
-                                        <td>
+                                        
+                                        @*<td>
                                             <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].SKU_Code" id="textSKU_No_0" onchange="javascript: Get_Purchase_Return_Items_By_SKU_Code(0);">
                                             <input type="hidden" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Purchase_Order_Id" id="hdnPurchase_Order_Id_0" />
+                                        </td>*@
+
+                                        <td>
+                                            <div class="form-group auto-complete">
+                                                <div class="input-group">
+                                                    @*<input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" onblur="javascript: Get_Purchase_Return_Items_By_SKU_Code(0);" placeholder="Enter SKU to search" value="" data-table="Purchase_Invoice_Item" data-col="Purchase_Order_Id,SKU_Code" data-headernames="SKU Code" data-param="hdf_Purchase_Invoice_Id" data-field="Purchase_Invoice_Id" />*@
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" placeholder="Enter SKU to search" value="" data-table="Purchase_Invoice_Item" data-col="Purchase_Order_Id,SKU_Code" data-headernames="SKU Code" data-param="hdf_Purchase_Invoice_Id" data-field="Purchase_Invoice_Id" />
+                                                    <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                                    <input type="hidden" id="hdnPurchase_Order_Id_0" value="" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Purchase_Order_Id" class="auto-complete-value" />
+                                                    @*<input type="hidden" id="hdnSKU_No_0" value="" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].SKU_Code" class="auto-complete-label" />*@
+                                                    <input type="hidden" id="hdnSKU_No_0" value="" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].SKU_Code" class="auto-complete-label" onchange="javascript:Get_Purchase_Return_Items_By_SKU_Code(0);" />
+                                                </div>
+                                            </div>
                                         </td>
+
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Article_No" id="textArticle_No_0" readonly />
                                         </td>
