--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Invoice.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Invoice.cshtml
@@ -1,19 +1,30 @@
-﻿@{
+﻿@model MyLeoRetailer.Models.SalesInvoiceViewModel
+
+@{
     ViewBag.Title = "Sales Invoice";
 }
 
 <h2>Invoice</h2>
 
-<script src="~/Scripts/printThis.js"></script>
-
-@*<script src="~/Scripts/Module/PurchseOrder/PurchaseOrderInvoice_events.js"></script>*@
+<script src="~/Scripts/Modules/PrintThis.js"></script>
 
 <script type="text/javascript">
-    $(document).ready(function () {
-        $('#btnPrint').click(function () {
+
+    //$(document).ready(function ()
+    //{
+    //        $('#Div_Print').printThis();     
+    //});
+
+    $(function ()
+    {
+
+        $('#btnPrint').click(function ()
+        {
             $('#Div_Print').printThis();
         });
+
     });
+
 </script>
 
 <div class="content-wrapper">
@@ -32,15 +43,14 @@
 
                         <div class="box box-default" id="Div_Print">
                             <div class="box-body">
-                                <input type="hidden" id="hdf_Invoice_Id" @*value="@Model.Invoice.Invoice_Id"*@ name="PurchaseOrder.Invoice_Id" />
-                                <input type="hidden" id="hdf_Role_Id" @*value="@Model.Invoice.Role_Id"*@ name="PurchaseOrder.Role_Id" />
+                                <input type="hidden" id="hdnSalesInvoiceID" @*value="@Model.Invoice.Invoice_Id"*@ name="Filter.Sales_Invoice_Id" />
 
                                 <!-- title row -->
                                 <div class="row">
 
                                     <div class="col-md-4 invoice-col">
                                         <div class="form-group">
-                                            <label for="txtStore_Name" style="color: #333" class="">Store Name</label>
+                                            <label for="txtStore_Name" style="color: #333" @Model.SalesInvoice.Branch_Name class="">Store Name : @Model.SalesInvoice.Branch_Name</label>
                                         </div>
                                     </div><!-- /.col -->
 
@@ -52,7 +62,7 @@
 
                                     <div class="col-md-5 invoice-col" style="text-align:right">
                                         <div class="form-group">
-                                            <label for="txtTel" style="color: #333" class="">Tel : 022 42778421</label>
+                                            <label for="txtTel" style="color: #333"  class="">Tel : @Model.SalesInvoice.Branch_Landline1, @Model.SalesInvoice.Branch_Landline2</label>
                                         </div>
                                     </div><!-- /.col -->
                                 </div>
@@ -62,12 +72,12 @@
 
                                     <div class="col-md-12 invoice-col" style="text-align:center; width:1200px;">
                                         <div class="form-group">
-                                            <label for="txtStore_Address1" style="color: #333" class="">Store Address1</label>
+                                            <label for="txtStore_Address1" style="color: #333" class="">Store Address : @Model.SalesInvoice.Branch_Address, @Model.SalesInvoice.Branch_Pincode,@Model.SalesInvoice.Branch_City,@Model.SalesInvoice.Branch_State,@Model.SalesInvoice.Branch_Country</label>
 
-                                            <br />
+                                            @*<br />
 
                                             <label for="txtStore_Address2" style="color: #333" class="">Store Address2</label>
-                                            <br />
+                                            <br />*@
 
 
                                         </div>
@@ -75,9 +85,11 @@
 
                                 </div>
 
+                                <br />
+
                                 <div class="row">
                                     <div class="col-md-10 invoice-col" style="text-align:center; width:1200px;">
-                                        <label for="txtCash_Memo" style="color: #333" class="">CASH MEMO</label>
+                                        <label for="txtCash_Memo" style="color: #333;text-decoration:underline" class="">CASH MEMO</label>
                                     </div>
                                 </div>
 
@@ -86,7 +98,7 @@
 
                                     <div class="col-md-4 invoice-col">
                                         <div class="form-group">
-                                            <label for="txtBill_No" style="color: #333" class="">Bill No : </label>
+                                            <label for="txtBill_No" style="color: #333" class="">Bill No : @Model.SalesInvoice.Sales_Invoice_No</label>
                                         </div>
                                     </div><!-- /.col -->
 
@@ -98,7 +110,7 @@
 
                                     <div class="col-sm-2 invoice-col" style="text-align:right">
                                         <div class="form-group">
-                                            <label for="txtDate" style="color: #333" class="">Date : 08/08/2016</label>
+                                            <label for="txtDate" style="color: #333" class="">Date : @Model.SalesInvoice.Created_Date.ToString("dd MMM yyyy")</label>
                                         </div>
                                     </div><!-- /.col -->
                                 </div>
@@ -107,7 +119,7 @@
 
                                     <div class="col-md-4 invoice-col">
                                         <div class="form-group">
-                                            <label for="txtCustomer_Name" style="color: #333" class="">Customer Name : </label>
+                                            <label for="txtCustomer_Name" style="color: #333" class="">Customer Name : @Model.SalesInvoice.Customer_Name</label>
                                         </div>
                                     </div><!-- /.col -->
 
@@ -119,7 +131,7 @@
 
                                     <div class="col-md-2 invoice-col" style="text-align:right;">
                                         <div class="form-group">
-                                            <label for="txtTime" style="color: #333" class="">Time : 12.30 AM    </label>
+                                            <label for="txtTime" style="color: #333" class="">Time : @Model.SalesInvoice.Created_Date.ToString("hh:mm tt")    </label>
                                         </div>
                                     </div><!-- /.col -->
                                 </div>
@@ -131,26 +143,66 @@
                                     <div class="col-xs-12 table-responsive">
                                         <table class="table table-bordered">
                                             <thead>
-                                                <tr>
-                                                    <th width="10%">Sr.No.</th>
-                                                    <th width="20%">Bracode</th>
-                                                    <th width="15%">Description</th>
-                                                    <th width="10%">Item Code</th>
-                                                    <th width="10%">Sixe</th>
-                                                    <th width="10%">Qty.</th>
-                                                    <th width="15%">Rate</th>
-                                                    <th width="20%">Amount</th>
+                                                <tr>                                                  
+                                                    <th width="10%">SKU Code</th>
+                                                    <th width="10%">Article No</th>
+                                                    <th width="10%">Quantity</th>
+                                                    <th width="10%">Brand</th>
+                                                    <th width="10%">Category</th>
+                                                    <th width="10%">Sub Category</th>
+                                                    <th width="10%">Size_Name</th>
+                                                    <th width="10%">Colour_Name</th>
+                                                    <th width="10%">MRP Amount</th>
+                                                    <th width="10%">Amount</th>
+                                                    <th width="10%">SalesMan</th>
                                                 </tr>
                                             </thead>
+
+                                            @foreach (var item in Model.SaleOrderItemList)
+                                            {
+                                                <tr id=@("SItem"+item.Sales_Invoice_Id.ToString())>                                                    
+
+                                                    <td>@item.SKU_Code</td>
+
+                                                    <td>@item.Article_No</td>
+
+                                                    <td>@item.Quantity</td>
+
+                                                    <td>@item.Brand</td>
+
+                                                    <td>@item.Category</td>
+
+                                                    <td>@item.SubCategory</td>    
+                                                    
+                                                    <td>@item.Size_Name</td>    
+                                                    
+                                                    <td>@item.Colour_Name</td>    
+
+                                                    <td>@item.MRP_Price</td>
+                                                    
+                                                    <td>@item.Amount</td>    
+                                                    
+                                                    <td>@item.SalesMan</td>                                                                                                                                             
+                                                    
+                                                </tr>
+                                            }
+
                                             <tbody>
                                                 @{
                                                     <tr>
-                                                        <th colspan="7" style="text-align: right;"> Total : </th>
-                                                        <td style="text-align: right;"></td>
+                                                        <th colspan="9" style="text-align: right;"> Gross Amount : </th>
+                                                        <th colspan="10" style="text-align: left;"> @Model.SalesInvoice.Gross_Amount</th>
+                                                        
                                                     </tr>
-
-                                                    <tr>
-                                                        <th colspan="8" style="text-align: left;">Salesman Name : </th>
+                                                    
+                                                     <tr>
+                                                        <th colspan="9" style="text-align: right;"> Total Discount Amount : </th>
+                                                         <th colspan="10" style="text-align: left;"> @Model.SalesInvoice.Total_Discount_Amount</th>
+                                                    </tr>
+                                                    
+                                                     <tr>
+                                                        <th colspan="9" style="text-align: right;"> Net Amount : </th>
+                                                         <th colspan="10" style="text-align: left;"> @Model.SalesInvoice.Net_Amount</th>
                                                     </tr>
                                                 }
                                             </tbody>
@@ -169,7 +221,7 @@
                                 </div>
 
                                 <div class="col-md-2">
-                                    <a class="btn btn-default bg-blue" role="button" id="btnBack" href="@Url.Action("Index", "Sales")">Back</a>
+                                    <a class="btn btn-default bg-blue" role="button" id="btnBack" href="@Url.Action("Index", "SalesOrder")">Back</a>
                                     @*<button type="button" id="btnPrint" class="btn btn-default bg-orange">Print</button>*@
                                 </div>
                             </div>
